# platform.core.appfw.wgt-manifest-handlers

./: .cproject  .project  AUTHORS  CMakeLists.txt  LICENSE  LICENSE-xwalk  project.config
packaging/: wgt-manifest-handlers.spec
src/: CMakeLists.txt
src/unit_tests/: CMakeLists.txt  content_handler_unittest.cc  parser_manifest_util_unittest.cc  service_handler_unittest.cc
src/unit_tests/test_samples/: bad_manifest.xml  good_manifest.xml  tpk-sample-manifest.xml
src/unit_tests/test_samples/bad_signatures/: author-signature.xml  signature1.xml
src/unit_tests/test_samples/good_signatures/: author-signature.xml  config.xml  index.html  signature1.xml
src/wgt_manifest_handlers/: CMakeLists.txt  account_handler.cc  account_handler.h  app_control_handler.cc  app_control_handler.h  application_icons_handler.cc  application_icons_handler.h  application_manifest_constants.cc  application_manifest_constants.h  appwidget_handler.cc  appwidget_handler.h  background_category_handler.cc  background_category_handler.h  category_handler.cc  category_handler.h  content_handler.cc  content_handler.h  csp_handler.cc  csp_handler.h  ime_handler.cc  ime_handler.h  metadata_handler.cc  metadata_handler.h  navigation_handler.cc  navigation_handler.h  permissions_handler.cc  permissions_handler.h  platform_version.cc  platform_version.h  service_handler.cc  service_handler.h  setting_handler.cc  setting_handler.h  splash_screen_handler.cc  splash_screen_handler.h  tizen_application_handler.cc  tizen_application_handler.h  warp_handler.cc  warp_handler.h  wgt-manifest-handlers.pc.in  (+4 more)
tools/: check-coding-style
