CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(WgtManifestHandlers)
SET(PREFIX "${CMAKE_INSTALL_PREFIX}")
SET(BINDIR "${CMAKE_INSTALL_PREFIX}/bin")
SET(LIBDIR "${CMAKE_INSTALL_LIBDIR}")
SET(SHAREDIR "${CMAKE_INSTALL_PREFIX}/share")
SET(INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/include")
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.1.0")
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

# Compiler flags
SET(CMAKE_C_FLAGS_PROFILING    "-O2")
SET(CMAKE_CXX_FLAGS_PROFILING  "-O2 -std=c++11")
SET(CMAKE_C_FLAGS_DEBUG        "-O0 -g")
SET(CMAKE_CXX_FLAGS_DEBUG      "-O0 -std=c++11 -g")
SET(CMAKE_C_FLAGS_RELEASE      "-O2 -g")
SET(CMAKE_CXX_FLAGS_RELEASE    "-O2 -std=c++11 -g")
SET(CMAKE_CXX_FLAGS_CCOV       "-O0 -std=c++11 -g --coverage")

# Targets
SET(TARGET_LIBNAME_WGT_MANIFEST_HANDLERS "wgt-manifest-handlers")

ADD_DEFINITIONS("-Wall")
ADD_DEFINITIONS("-Wextra")
ADD_DEFINITIONS("-fPIE")
ADD_DEFINITIONS("-fPIC")
ADD_DEFINITIONS("-DPROJECT_TAG=\"wgt-manifest-handlers\"")

ADD_DEFINITIONS("-DSHAREDIR=\"${SHAREDIR}\"")
ADD_DEFINITIONS("-DTIZEN_VERSION=\"${TIZEN_VERSION}\"")
IF(TIZEN_PROFILE STREQUAL "tv")
  ADD_DEFINITIONS("-DTIZEN_TV")
ELSEIF(TIZEN_PROFILE STREQUAL "mobile")
  ADD_DEFINITIONS("-DTIZEN_MOBILE")
ELSEIF(TIZEN_PROFILE STREQUAL "wearable")
  ADD_DEFINITIONS("-DTIZEN_WEARABLE")
ENDIF()

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
INCLUDE(FindPkgConfig)
INCLUDE(ApplyPkgConfig)

PKG_CHECK_MODULES(PKGMGR_PARSER_DEPS REQUIRED pkgmgr-parser)
PKG_CHECK_MODULES(PKGMGR_INFO_DEPS REQUIRED pkgmgr-info)
PKG_CHECK_MODULES(LIBXML_DEPS REQUIRED libxml-2.0)
PKG_CHECK_MODULES(VCONF_DEPS REQUIRED vconf)
PKG_CHECK_MODULES(LIBIRI_DEPS REQUIRED libiri)
PKG_CHECK_MODULES(XGDMIME_DEPS REQUIRED xdgmime)
PKG_CHECK_MODULES(MANIFEST_PARSER_DEPS REQUIRED manifest-parser)
PKG_CHECK_MODULES(MANIFEST_PARSER_UTILS_DEPS REQUIRED manifest-parser-utils)

FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem)

# xmlsec1 - choose crypto library which to use
ADD_DEFINITIONS("-DXMLSEC_CRYPTO_OPENSSL")

ADD_SUBDIRECTORY(src)
